--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,12 @@ html {
   scroll-padding-top: 7rem;
 }
 
+html,
+body {
+  width: 100%;
+  min-height: 100vh;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
